--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li>В данный момент учусь в МФТИ на Факультете инноваций и высоких технологий</li>
         </ul>   
     </div>
-    <div class="about">
+    <div class="contacts">
             <p>Контакты:</p>
             <ul>
                <li>
