--- a/Task3/index.html
+++ b/Task3/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <script src = "jquery-3.2.1.js"></script>
+  <script src = "jquery.js"></script>
 </head>
 
 <body>
